Updating pom files to use system + bump version + enable secured space tests